# thisisahousegallery

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTORS.txt  LICENSE  MATERIALS_INVESTIGATION_REPORT.md  PROJECT_EPIC_HEADLESS_CMS_API.md  README.md  astro.config.mjs  bulk_import_artworks_fixed.py  finops-report.md  fix_existing_artworks.py  manage.py  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json
claude/personas/: amy-playwright-director.md  critical-thinker.md  qa-lover.md  senior-dev-review.md  toby-the-dev.md
cloudbuild/: Dockerfile  cloudbuild_dev.yaml  cloudbuild_prod_build.yaml  dev.yaml  dev_sync.yaml  prod_backup.yaml  prod_build.yaml  prod_deploy.yaml  qa_sync.yaml  schedulers.yaml  staging.yaml  staging_sync.yaml  start
compose/: compose-cloud.yml  compose.local-cloud-prod.yml  compose.local-cloud.yml  compose.local-offline.yml  compose.yml  docker-compose.yml
compose/django/: Dockerfile  start
compose/node/: Dockerfile
config/: api_router.py  asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  local_cloud.py  local_offline.py  production.py  test.py
docs/release-notes/: 2025-12-05-performance-optimization.md
docs/starlette-rewrite/: email-editor-spec.md
housegallery/: conftest.py
housegallery/api/: README.md  admin.py  admin_viewsets.py  apps.py  models.py  urls.py  wagtail_hooks.py
housegallery/artists/: models.py  views.py  viewsets.py  wagtail_hooks.py  widgets.py
housegallery/artworks/: admin_views.py  forms.py  models.py  views.py  viewsets.py  wagtail_hooks.py  widgets.py
housegallery/core/: __init__.py  image_utils.py  mixins.py  models.py  rich_text.py  utils.py
housegallery/exhibitions/: __init__.py  apps.py  blocks.py  models.py  signals.py  views.py  wagtail_hooks.py  widgets.py
housegallery/home/: blocks.py  models.py  views.py
housegallery/images/: __init__.py  admin_views.py  models.py  urls.py  views.py  wagtail_hooks.py
housegallery/kiosk/: apps.py  blocks.py  models.py  urls.py  views.py  viewsets.py  wagtail_hooks.py
housegallery/newsletter/: admin_views.py  apps.py  blocks.py  models.py  pages.py  services.py  urls.py  utils.py  views.py  viewsets.py  wagtail_hooks.py
housegallery/places/: __init__.py  apps.py  models.py  views.py  wagtail_hooks.py  widgets.py
housegallery/templates/: base.html
playwright-workstudy/: .env.example  .gitignore  README.md  add_artworks.js  package-lock.json  package.json  playwright.config.js
playwright-workstudy/config/: environment.js  global-setup.js
playwright-workstudy/data/: artists.json  artworks.json
playwright-workstudy/tests/: auth.cleanup.js  auth.setup.js  smoke.spec.js
playwright-workstudy/utils/: cms-helpers.js  data-loader.js  index.js  logger.js  progress-tracker.js
public/: CNAME  nat294.cur
requirements/: base.txt  local.txt  production.txt
src/components/: Example-Component.astro  Exhibition-Quickview.astro  Header.astro  cca-footer-for-lauren.astro  exhibition-listing.astro  image-with-quickview.astro  image-with-quickview.svelte  quickview-simple.astro  quickview-simple.svelte  quickview-thumbnails.astro
src/data/: .exhibition-database.json.swp  artist-database-12_28_2023-v1.json  artist-database-12_28_2023-v2.json  artist-database.json  artwork-database-06_13_2024-v1.json  artwork-database-06_14_2024-v1.json  artwork-database-nov_04_2023.json  backup.json  exhibition-database.json  image-database-06_12_2024-v1.json  image-database-dec_25_2023-v2.json  image-database-dec_28_2023.json  image-database-dec_29_2023-v1.json  image-database-nov-4-2023-v2.json  image-database-nov_4_2023-v4.json  image-database-nov_4_2023-v5.json  image-database-nov_4_2023-v7.json  image-database-oct_16_2023.json  tabletstablestombstones-artists.json  thisisalivingroom-image_data-r1-063023.json  yourleastfavoritework-artists.json  yourleastfavwork-images.json
src/layouts/: Base.astro  Layout-no_header.astro  Layout.astro
src/pages/: about.astro  fuckyouimages  index.astro  memories.astro  menu.astro  more-like-this.astro  open-call.astro  (+2 more)
thisisahousegallerybird/: conftest.py
webpack/: common.config.js
(+400 files in other folders)
